log
Thu 07 Sep 2023 12:57:01 AM UTC: 
 tests:  0|6
total_score: 0/70
845ede3
Thu 07 Sep 2023 01:07:26 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5252bc1
Thu 07 Sep 2023 01:08:00 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
fe7dbfd
Thu 07 Sep 2023 01:13:15 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|6
total_score: 0/70
1a4fa1e
Thu 07 Sep 2023 01:14:42 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
01d9a59
Thu 07 Sep 2023 01:16:20 AM UTC: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  1|5
total_score: 10/70
4d6a0c3
Thu 07 Sep 2023 01:22:38 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:8: error: unused variable ‘clave’ [-Werror=unused-variable]
   44 |   long clave= hash(key, map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
14c9830
Thu 07 Sep 2023 01:24:15 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
af1d133
Thu 07 Sep 2023 01:25:59 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fad0978
Thu 07 Sep 2023 01:27:45 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0e89843
Thu 07 Sep 2023 01:31:46 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:10: error: unused variable ‘indice’ [-Werror=unused-variable]
   47 |     long indice= hash(key, map->capacity);
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ddf8372
Thu 07 Sep 2023 01:33:13 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
5413fba
Thu 07 Sep 2023 01:36:57 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:10: error: unused variable ‘repetidosverificar’ [-Werror=unused-variable]
   51 |     long repetidosverificar=(indice+1)%(map->capacity);
      |          ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ef30e57
Thu 07 Sep 2023 01:37:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:10: error: unused variable ‘repetidos’ [-Werror=unused-variable]
   51 |     long repetidos=(indice+1)%(map->capacity);
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5abcbcb
Thu 07 Sep 2023 01:41:29 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:38: error: expected expression before ‘char’
   55 |     map->buckets[indice]=createPair( char * key,  void * value)
      |                                      ^~~~
hashmap.c:55:26: error: too few arguments to function ‘createPair’
   55 |     map->buckets[indice]=createPair( char * key,  void * value)
      |                          ^~~~~~~~~~
hashmap.c:19:8: note: declared here
   19 | Pair * createPair( char * key,  void * value) {
      |        ^~~~~~~~~~
hashmap.c:55:64: error: expected ‘;’ before ‘}’ token
   55 |     map->buckets[indice]=createPair( char * key,  void * value)
      |                                                                ^
      |                                                                ;
   56 |   }
      |   ~                                                             
Compilation failed
d983cf5
Thu 07 Sep 2023 01:41:40 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
96c3093
Thu 07 Sep 2023 01:42:26 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
a52dd0f
Thu 07 Sep 2023 01:43:25 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|5
total_score: 10/70
e732adf
Thu 07 Sep 2023 01:49:15 AM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
58053e8
Thu 07 Sep 2023 02:45:36 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:109:8: error: unused variable ‘indice’ [-Werror=unused-variable]
  109 |   long indice= hash(key, map->capacity);
      |        ^~~~~~
hashmap.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
75c5666
Thu 07 Sep 2023 02:47:43 AM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
  116 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f057da0
Thu 07 Sep 2023 02:48:04 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a6d6ac0
Thu 07 Sep 2023 02:48:48 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
bf42195
